Update yaml2json.py and user

--- a/seed_job/files/users.yaml
+++ b/seed_job/files/users.yaml
@@ -1,1 +1,6 @@
-sample: sample
+- name: sample-user
+  pass: password
+- name: sample-user1
+  pass: changeme
+- name: sample-user2
+  pass: iwonttellyou 
