Update create user groovy

--- a/seed_job/files/users.yaml
+++ b/seed_job/files/users.yaml
@@ -23,6 +23,7 @@
       build: true
       cancel: true
       configure: true
+      create: true
       delete: true
       discover: true
       move: true
