update set crowd2 and config

--- a/seed_job/files/crowd2.yaml
+++ b/seed_job/files/crowd2.yaml
@@ -3,7 +3,7 @@ applicationName: "jenkins"
 password: "password"
 group: ''
 nestedGroups: false
-sessionValidationInterval: '2'
+sessionValidationInterval: 2
 useSSO: false
 cookieDomain: ''
 cookieTokenkey: ''
