Fix typo jave_path to java_path

--- a/seed_job/files/nodes.yaml
+++ b/seed_job/files/nodes.yaml
@@ -10,7 +10,7 @@
     credential_id: 'sample_global_system_cred'
     hostkey_verify: 'non_verify'
     port: 22
-    jave_path: ''
+    java_path: ''
     jvm_options: ''
     prefix_start_slave_cmd: ''
     suffix_start_slave_cmd: ''
