--- a/seed_job/files/nodes.yaml
+++ b/seed_job/files/nodes.yaml
@@ -17,7 +17,32 @@
     connection_timeout: 0
     maximum_number_of_retries: 3
     seconds_between_retries: 30
-  availability: keep
+  mode: normal
+  node_properties:
+    enable_node_based_security: false
+    environment_variables: ''
+    tool_location: '' 
+
+- name: sample_agent1
+  description: just a sample agent
+  executors: 1
+  remote_root_dir: "/home/ubuntu/workspace"
+  label: test
+  usages: max
+  launch_method:
+    type: "ssh_launcher"
+    host: "192.168.0.1"
+    credential_id: 'sample_global_system_cred'
+    hostkey_verify: 'non_verify'
+    port: 22
+    java_path: ''
+    jvm_options: ''
+    prefix_start_slave_cmd: ''
+    suffix_start_slave_cmd: ''
+    connection_timeout: 0
+    maximum_number_of_retries: 3
+    seconds_between_retries: 30
+  mode: "exclusive"
   node_properties:
     enable_node_based_security: false
     environment_variables: ''
