--- a/seed_job/files/plugins.yaml
+++ b/seed_job/files/plugins.yaml
@@ -13,6 +13,7 @@ bouncycastle-api : "2.16.2"
 ldap : "1.20"
 git : "3.8.0"
 handlebars : "1.1.1"
+parameterized-trigger : "2.35.2"
 mapdb-api : "1.0.9.0"
 docker-workflow : "1.15.1"
 authorize-project : "1.3.0"
@@ -25,15 +26,20 @@ workflow-support : "2.18"
 momentjs : "1.1.1"
 job-dsl : "1.68"
 workflow-step-api : "2.14"
+crowd2 : "1.8"
 build-timeout : "1.19"
+metrics : "3.1.2.11"
 workflow-multibranch : "2.17"
+run-condition : "1.0"
 antisamy-markup-formatter : "1.5"
 pipeline-model-extensions : "1.2.7"
 subversion : "2.10.3"
 pipeline-github-lib : "1.0"
 docker-commons : "1.11"
+javadoc : "1.4"
 gradle : "1.28"
 pipeline-utility-steps : "2.0.1"
+maven-plugin : "3.1"
 branch-api : "2.0.18"
 scm-api : "2.2.6"
 jsch : "0.1.54.2"
@@ -46,11 +52,13 @@ pam-auth : "1.3"
 ssh-credentials : "1.13"
 git-client : "2.7.1"
 junit : "1.24"
+windows-slaves : "1.3.1"
 display-url-api : "2.2.0"
 workflow-cps-global-lib : "2.9"
 plain-credentials : "1.4"
 pipeline-input-step : "2.8"
 ws-cleanup : "0.34"
+conditional-buildstep : "1.3.6"
 pipeline-build-step : "2.7"
 github-api : "1.90"
 mailer : "1.20"
@@ -70,8 +78,10 @@ matrix-auth : "2.2"
 apache-httpcomponents-client-4-api : "4.5.3-2.1"
 workflow-job : "2.17"
 github : "1.29.0"
+external-monitor-job : "1.7"
+prometheus : "1.1.1"
 cloudbees-folder : "6.3"
 matrix-project : "1.12"
 workflow-basic-steps : "2.6"
 token-macro : "2.3"
-crowd2 : "1.8"
+slack : "2.2"
