Add secret text support for slack

--- a/seed_job/files/sys_credentials.yaml
+++ b/seed_job/files/sys_credentials.yaml
@@ -18,7 +18,7 @@
   
 - id: 'sample_global_system_cred_secret_text'
   domain: global
-  type: username_secret_text
+  type: secret_text
   scope: system
   description: 'a sample cred within scope system in domain global'
   secret: 'secret'
